// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty Celebrate Feed rendering renders correctly for group feed 1`] = `
<NullStateComponent
  descriptionText="You can celebrate each other's Steps of Faith here."
  headerText="Celebrate!"
  imageSource={
    Object {
      "testUri": "../../../assets/images/celebrateHearts.png",
    }
  }
/>
`;

exports[`Empty Celebrate Feed rendering renders correctly for member feed 1`] = `
<NullStateComponent
  descriptionText="You can celebrate Roge's Steps of Faith here."
  headerText="Celebrate!"
  imageSource={
    Object {
      "testUri": "../../../assets/images/celebrateHearts.png",
    }
  }
/>
`;

exports[`Empty Celebrate Feed rendering renders correctly for member feed ending in s 1`] = `
<NullStateComponent
  descriptionText="You can celebrate Roges' Steps of Faith here."
  headerText="Celebrate!"
  imageSource={
    Object {
      "testUri": "../../../assets/images/celebrateHearts.png",
    }
  }
/>
`;
